# qtsass

./: .authors.yml  .gitignore  .mailmap  .travis.yml  AUTHORS.md  AUTHORS.txt  CHANGELOG.md  LICENSE.txt  README.md  RELEASE.md  appveyor.yml  requirements-dev.txt  rever.xsh  run_checks_and_format.py  setup.cfg  setup.py  test_qtsass.py
.github/workflows/: ci.yml
examples/: dummy.scss
examples/complex/: _base.scss  _defaults.scss  dark.scss
examples/complex/widgets/: _qlineedit.scss  _qpushbutton.scss  _qwidget.scss
qtsass/: __init__.py  __main__.py  api.py  cli.py  conformers.py  events.py  functions.py  importers.py  qtsass.py
qtsass/watchers/: __init__.py  api.py  polling.py  qt.py  snapshots.py  watchdog.py
requirements/: dev.txt  install.txt  release.txt
tests/: __init__.py  test_api.py  test_cli.py  test_conformers.py  test_functions.py  test_watchers.py
