[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=1

# pydocstyle
# http://www.pydocstyle.org/en/latest/usage.html
# [pydocstyle]

# pycodestyle
# http://pycodestyle.pycqa.org/en/latest/intro.html#configuration
[pycodestyle]
max-line-length = 79
statistics = True

# yapf
# https://github.com/google/yapf#formatting-style
[yapf:style]
based_on_style = pep8
column_limit = 79
spaces_before_comment = 2
allow_multiline_lambdas = true
dedent_closing_brackets = true
blank_line_before_nested_class_or_def = false

# isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
[isort]
from_first = true
import_heading_stdlib = Standard library imports
import_heading_firstparty = Local imports
import_heading_localfolder = Local imports
import_heading_thirdparty = Third party imports
indent = '    '
known_first_party = qtsass
known_third_party = libsass,pytest,setuptools,watchdog
default_section = THIRDPARTY
line_length = 79
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
lines_after_imports = 2
skip = venv
multi_line_output = 3
include_trailing_comma = true
